Remove sun.misc.SharedSecrets.
jdk.internal.misc.SharedSecrets was introduced recently and having
two copies is error-prone - new OpenJDK files won't use sun.misc
flles.

Bug: 274903808
Test: CtsLibcoreTestCases
Test: CtsLibcoreOjTestCases
Change-Id: I05cd5d2a317e58e8272679f4ad750430c5e6c034